--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>David Travezaño Yllo</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="icon" type="img/png" href="img/ico3.png" />
+	<link rel="icon" type="img/png" href="img/ico3.jpg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
@@ -28,7 +28,7 @@
 				            </button>
 				        </div>
 				        <div id="navbarCollapse" class="collapse navbar-collapse text-center">
-	               <ul class="menu  ">
+	               <ul class="menu">
 									<li><a href="#sobre">Sobre mí</a></li>
 									<li><a href="#habilidades">Mis habilidades</a></li>
 									<li><a href="#proyectos">Mis proyectos</a></li>
@@ -73,7 +73,7 @@
 						 Soy una persona con <span class="resaltar"> alta capacidad de análisis y detección de errores, 
 						 capaz de generar soluciones </span> y transformarlas en oportunidades de desarrollo.
 						 Soy estudiante de Ingenieria Electronica y Developer Backend, pero aspiro a muchas cosas más, como ser Developer Full Stack o Team Leader.<br><br>
-							<span class="resaltar">Ser Developer va más allá de un click o de un enter, es analizar, soñar y crear</span>.
+							<span class="resaltar">Ser Developer va más allá de un click o de un enter, es una pasión y un estilo de vida</span>.
 					</div>
 				</div>
 			</div>
@@ -100,7 +100,6 @@
 				    </p>
 						<progress max="100" value="60" class="html5">
 							<div class="progress-bar">
-								<span class="f-f" style="font-size:90px">90%</span>
 							</div>
 						</progress>
 						<!-- CSS3 -->
@@ -109,7 +108,6 @@
 				    </p>
 						<progress max="100" value="50" class="css3">
 							<div class="progress-bar">
-								<span style="width: 90%">90%</span>
 							</div>
 						</progress>
 						<!-- Javascript -->
@@ -118,7 +116,6 @@
 				    </p>
 						<progress max="100" value="60" class="css3">
 							<div class="progress-bar">
-								<span style="width: 80%">80%</span>
 							</div>
 						</progress>
 						<!-- jQuery -->
@@ -127,7 +124,6 @@
 				    </p>
 						<progress max="100" value="50" class="jquery">
 							<div class="progress-bar">
-								<span style="width: 75%">75%</span>
 							</div>
 						</progress>
 						
@@ -139,7 +135,6 @@
 				    </p>
 						<progress max="100" value="70" class="python">
 							<div class="progress-bar">
-								<span style="width:100%">100%</span>
 							</div>
 						</progress>
 				    <p style="width:50%" data-value="50">
@@ -147,7 +142,6 @@
 				    </p>
 						<progress max="100" value="50" class="php">
 							<div class="progress-bar">
-								<span style="width: 75%">75%</span>
 							</div>
 						</progress>
 				    <p style="width:50%" data-value="50">
@@ -155,7 +149,6 @@
 				    </p>
 				    <progress max="100" value="50" class="node-js">
 							<div class="progress-bar">
-								<span style="width: 50%">50%</span>
 							</div>
 					</progress>	
 					</li>
@@ -164,7 +157,7 @@
 			<div class="row pt-60">
 					<ul class="tols">
 						<li class="lista">
-							<h3 class="habilidad">Frameworks Web</h3>
+							<h3 class="habilidad">Frameworks</h3>
 							<!-- HTML5 -->
 						<p style="width:70%" data-value="70">
 							<img class="imgHabi" src="img/django.png">
@@ -234,7 +227,6 @@
 					</p>
 						<progress max="100" value="80" class="html5">
 							<div class="progress-bar">
-								<span class="f-f" style="font-size:40px">40%</span>
 							</div>
 						</progress>
 						<p style="width:70%" data-value="70">
@@ -242,7 +234,6 @@
 					</p>
 						<progress max="100" value="70" class="html5">
 							<div class="progress-bar">
-								<span class="f-f" style="font-size:40px">40%</span>
 							</div>
 						</progress>
 					</li>					
@@ -253,7 +244,6 @@
 				</p>
 					<progress max="100" value="60" class="html5">
 						<div class="progress-bar">
-							<span class="f-f" style="font-size:40px">40%</span>
 						</div>
 					</progress>
 					<p style="width:40%" data-value="40">
@@ -261,7 +251,6 @@
 				</p>
 					<progress max="100" value="40" class="html5">
 						<div class="progress-bar">
-							<span class="f-f" style="font-size:40px">40%</span>
 						</div>
 					</progress>
 				</li>
@@ -282,6 +271,30 @@
 			<div class="row p-50">
 				<div class="col-md-12">
 					<div class="hovereffect ">
+				        <img class="appdescktop"  src="img/RedSocial_Django.png">
+				        <div class="overlay">
+			            	<h2>Proyecto  Django <br><span style="font-size:small;">(Desarrollo individual)</span></h2>
+			            	<a class="info" target="_blank" href="http://devtrave.pythonanywhere.com/">Ver Demo</a>
+			            	<a class="info" target="_blank" href="https://github.com/David110690/ProjectDjango">Ver Código</a>
+		        		</div>
+					</div>
+					<div class="hovereffect p-50 ">
+				        <img class="appdescktop"  src="img/app_clima_angular.png">
+				        <div class="overlay">
+			            	<h2>Proyecto Angular <br><span style="font-size:small;">(Desarrollo individual)</span></h2>
+			            	<a class="info" target="_blank" href="https://clima-app-three.vercel.app/">Ver Demo</a>
+			            	<a class="info" target="_blank" href="https://github.com/David110690/Angular_Clima">Ver Código</a>
+		        		</div>
+					</div>
+					<div class="hovereffect p-50 ">
+				        <img class="appdescktop"  src="img/Crud_Angular_Deploy.png">
+				        <div class="overlay">
+			            	<h2>Angular CRUD <br><span style="font-size:small;">(Desarrollo individual)</span></h2>
+			            	<a class="info" target="_blank" href="https://angularcrud.now.sh/">Ver Demo</a>
+			            	<a class="info" target="_blank" href="https://github.com/David110690/AngularCrud">Ver Código</a>
+		        		</div>
+					</div>
+					<div class="hovereffect p-50 ">
 				        <img class="appdescktop"  src="img/Crud_Angular_Deploy.png">
 				        <div class="overlay">
 			            	<h2>Angular CRUD <br><span style="font-size:small;">(Desarrollo individual)</span></h2>
@@ -356,7 +369,6 @@
 	</footer>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
