--- a/index.html
+++ b/index.html
@@ -269,35 +269,52 @@
 			</div>
 			
 			<div class="row p-50">
-				<div class="col-md-12">
-					<div class="hovereffect ">
+				<div class="col-md-6">
+					<div class="hovereffect p-50">
 				        <img class="appdescktop"  src="img/RedSocial_Django.png">
 				        <div class="overlay">
-			            	<h2>Proyecto  Django <br><span style="font-size:small;">(Desarrollo individual)</span></h2>
+							<h2>Proyecto  Django <br><span style="font-size:small;">Aplicación que te permite realizar posts. Realizado con el 
+								patron de diseño MVT que maneja Django y un modelamiento de base de datos SQlite3. Todo desplegada en pythonanywhere
+								Permite registrarte (datos que son guardados en la Base de Datos), logearte (previa auntenticación), crear un perfil 
+								(que incluye subir una foto) y hacer posts.	Adicionalmente puedes ver el perfil de cuaquier usuario, seguirlo o dejar
+								de seguirlo.</span></h2>
 			            	<a class="info" target="_blank" href="http://devtrave.pythonanywhere.com/">Ver Demo</a>
 			            	<a class="info" target="_blank" href="https://github.com/David110690/ProjectDjango">Ver Código</a>
 		        		</div>
 					</div>
+				</div>	
+
+				<div class="col-md-6">
 					<div class="hovereffect p-50 ">
 				        <img class="appdescktop"  src="img/app_clima_angular.png">
 				        <div class="overlay">
-			            	<h2>Proyecto Angular <br><span style="font-size:small;">(Desarrollo individual)</span></h2>
+							<h2>Proyecto Angular <br><span style="font-size:small;">Apicación realizada con el Framework Angular
+								que consume una API de OpenWeathermap. Simplemente ingresas una ciudad, el código del país y la aplicacion 
+							arroja datos a tiempo real de Temperatura, Latitud, longitud y porcentaje de humedad </span></h2>
 			            	<a class="info" target="_blank" href="https://clima-app-three.vercel.app/">Ver Demo</a>
 			            	<a class="info" target="_blank" href="https://github.com/David110690/Angular_Clima">Ver Código</a>
 		        		</div>
 					</div>
+				</div>
+
+				<div class="col-md-6">
 					<div class="hovereffect p-50 ">
-				        <img class="appdescktop"  src="img/Crud_Angular_Deploy.png">
+				        <img class="appdescktop"  src="img/tarea_flask.png">
 				        <div class="overlay">
-			            	<h2>Angular CRUD <br><span style="font-size:small;">(Desarrollo individual)</span></h2>
-			            	<a class="info" target="_blank" href="https://angularcrud.now.sh/">Ver Demo</a>
-			            	<a class="info" target="_blank" href="https://github.com/David110690/AngularCrud">Ver Código</a>
+							<h2>Flask y Python <br><span style="font-size:small;">Aplicación de tareas realizada con el Framework Flask de Python y una 
+								base de datos Sqlite3 desplegada en Ptyhonanymwere.	Te permite agregar una tarea, tacharla como realizada y/o 
+							eliminarla. </span></h2>
+			            	<a class="info" target="_blank" href="http://davjesus.pythonanywhere.com/">Ver Demo</a>
+			            	<a class="info" target="_blank" href="https://github.com/David110690/FlaskCrudSQLite3">Ver Código</a>
 		        		</div>
 					</div>
+				</div>
+
+				<div class="col-md-6">
 					<div class="hovereffect p-50 ">
 				        <img class="appdescktop"  src="img/Crud_Angular_Deploy.png">
 				        <div class="overlay">
-			            	<h2>Angular CRUD <br><span style="font-size:small;">(Desarrollo individual)</span></h2>
+			            	<h2>Angular CRUD <br><span style="font-size:small;">Crud con Angular</span></h2>
 			            	<a class="info" target="_blank" href="https://angularcrud.now.sh/">Ver Demo</a>
 			            	<a class="info" target="_blank" href="https://github.com/David110690/AngularCrud">Ver Código</a>
 		        		</div>
