--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>David Travezaño Yllo</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="icon" type="img/png" href="img/ico3.jpg" />
+	<link rel="icon" type="img/png" href="img/ico3.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
@@ -62,7 +62,7 @@
 			</div>
 			<div class="row pt-60">
 				<div class="col-md-6 text-center">
-					<img src="img/image1.jpg" alt="">
+					<img src="img/image1.png" alt="">
 				</div>
 				<div class="col-md-6">
 					<div class="descripcion">
@@ -72,8 +72,8 @@
 						 comunicativas que me <span class="resaltar"> permiten trabajar en equipo y adaptarme fácilmente.</span> 
 						 Soy una persona con <span class="resaltar"> alta capacidad de análisis y detección de errores, 
 						 capaz de generar soluciones </span> y transformarlas en oportunidades de desarrollo.
-						 Soy estudiante de Ingenieria Electronica y Developer Backend, pero aspiro a muchas cosas más, como ser Developer Full Stack o Team Leader.<br><br>
-							<span class="resaltar">Ser Developer va más allá de un click o de un enter, es una pasión y un estilo de vida</span>.
+						 Soy estudiante de Ingenieria Electronica, Developer Backend y aspiro a muchas cosas más, como ser Developer Full Stack o Team Leader.<br><br>
+							<span class="resaltar">Ser Developer va más allá de escribir un codigo, es una pasión y un estilo de vida</span>.
 					</div>
 				</div>
 			</div>
@@ -273,7 +273,7 @@
 					<div class="hovereffect p-50">
 				        <img class="appdescktop"  src="img/RedSocial_Django.png">
 				        <div class="overlay">
-							<h2>Proyecto  Django <br><span style="font-size:small;">Aplicación que te permite realizar posts. Realizado con el 
+							<h2>Proyecto  Django <br><span style="font-size:x-small">Aplicación que te permite realizar posts. Realizado con el 
 								patron de diseño MVT que maneja Django y un modelamiento de base de datos SQlite3. Todo desplegada en pythonanywhere
 								Permite registrarte (datos que son guardados en la Base de Datos), logearte (previa auntenticación), crear un perfil 
 								(que incluye subir una foto) y hacer posts.	Adicionalmente puedes ver el perfil de cuaquier usuario, seguirlo o dejar
@@ -286,9 +286,9 @@
 
 				<div class="col-md-6">
 					<div class="hovereffect p-50 ">
-				        <img class="appdescktop"  src="img/app_clima_angular.png">
+				        <img class="appdescktop"  src="img/app_clima_angular.png" href >
 				        <div class="overlay">
-							<h2>Proyecto Angular <br><span style="font-size:small;">Apicación realizada con el Framework Angular
+							<h2>Proyecto Angular <br><span style="font-size:x-small;">Apicación realizada con el Framework Angular
 								que consume una API de OpenWeathermap. Simplemente ingresas una ciudad, el código del país y la aplicacion 
 							arroja datos a tiempo real de Temperatura, Latitud, longitud y porcentaje de humedad </span></h2>
 			            	<a class="info" target="_blank" href="https://clima-app-three.vercel.app/">Ver Demo</a>
