--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>David Travezaño Yllo</title>
@@ -364,7 +364,7 @@
 						</div>
 						<div class="ico-contacto">
 							<i class="fa fa-file-text-o fa-2x"></i>
-							<a target="_blank" href="docs/CV_DAVID TRAVEZAÑO YLLO.pdf"><span>Descargar CV</span></a>
+							<a target="_blank" href="docs/CV_DAVID_TRAVEZAÑO.pdf"><span>Descargar CV</span></a>
 
 						</div>
 					</div>
